--- a/src/main/resources/conferenceDetail.fxml
+++ b/src/main/resources/conferenceDetail.fxml
@@ -1,141 +1,169 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1005.0" style="-fx-background: #36393F; -fx-background-color: #36393F;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <content>
-      <GridPane prefWidth="1006.0" style="-fx-background-color: #36393F;">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <GridPane prefWidth="919.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="0.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" percentHeight="0.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1005.0" style="-fx-background-color: #36393F; -fx-background-radius: 20;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ScrollPane hbarPolicy="NEVER" layoutY="0.6000000238418579" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="970.0" style="-fx-background: #36393F; -fx-background-color: #36393F;" AnchorPane.leftAnchor="24.0" AnchorPane.topAnchor="49.0">
+         <content>
+            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="953.0">
                <children>
-                  <ImageView fx:id="conferenceImageView" fitHeight="302.0" fitWidth="536.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
-                     <GridPane.margin>
-                        <Insets left="20.0" top="20.0" />
-                     </GridPane.margin>
-                  </ImageView>
-                  <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="270.0" prefWidth="223.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
-                    <columnConstraints>
-                      <ColumnConstraints minWidth="10.0" percentWidth="0.0" prefWidth="100.0" />
-                      <ColumnConstraints percentWidth="0.0" prefWidth="122.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <GridPane.margin>
-                        <Insets left="50.0" />
-                     </GridPane.margin>
-                  </GridPane>
-                  <AnchorPane GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
-                     <GridPane.margin>
-                        <Insets left="50.0" />
-                     </GridPane.margin>
+                  <VBox>
                      <children>
-                        <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="270.0" prefWidth="385.0" style="-fx-background-color: #555A61; -fx-background-radius: 30;" AnchorPane.bottomAnchor="0.0">
+                        <HBox>
                            <children>
-                              <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="NEVER">
+                              <ImageView fx:id="conferenceImageView" fitHeight="302.0" fitWidth="536.0" pickOnBounds="true" HBox.hgrow="NEVER" />
+                              <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="270.0" prefWidth="385.0" style="-fx-background-color: #555A61; -fx-background-radius: 30;">
                                  <children>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@icons/calendar.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Text fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-                                       <font>
-                                          <Font name="Arial Bold" size="22.0" />
-                                       </font>
-                                       <HBox.margin>
-                                          <Insets left="10.0" />
-                                       </HBox.margin>
-                                    </Text>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@icons/team.png" />
-                                       </image>
-                                       <HBox.margin>
-                                          <Insets />
-                                       </HBox.margin>
-                                    </ImageView>
-                                    <Text fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-                                       <font>
-                                          <Font name="Arial Bold" size="22.0" />
-                                       </font>
-                                       <HBox.margin>
-                                          <Insets left="10.0" />
-                                       </HBox.margin>
-                                    </Text>
+                                    <HBox prefWidth="200.0">
+                                       <children>
+                                          <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@icons/calendar.png" />
+                                             </image>
+                                             <HBox.margin>
+                                                <Insets left="30.0" top="25.0" />
+                                             </HBox.margin>
+                                          </ImageView>
+                                          <Text fx:id="timeText" fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="2020/08/31 16:00" wrappingWidth="110.33753204345703">
+                                             <HBox.margin>
+                                                <Insets left="10.0" top="23.0" />
+                                             </HBox.margin>
+                                             <font>
+                                                <Font name="Consolas" size="20.0" />
+                                             </font>
+                                          </Text>
+                                          <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@icons/team.png" />
+                                             </image>
+                                             <HBox.margin>
+                                                <Insets left="20.0" top="25.0" />
+                                             </HBox.margin>
+                                          </ImageView>
+                                          <VBox>
+                                             <children>
+                                                <Text fx:id="attendeeText" fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="1000" wrappingWidth="110.33753204345703">
+                                                   <font>
+                                                      <Font name="Consolas" size="20.0" />
+                                                   </font>
+                                                </Text>
+                                                <Text fx:id="limitText" fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="1000" wrappingWidth="110.33753204345703">
+                                                   <font>
+                                                      <Font name="Consolas Bold" size="22.0" />
+                                                   </font>
+                                                   <VBox.margin>
+                                                      <Insets top="5.0" />
+                                                   </VBox.margin>
+                                                </Text>
+                                             </children>
+                                             <HBox.margin>
+                                                <Insets left="15.0" top="20.0" />
+                                             </HBox.margin>
+                                          </VBox>
+                                       </children>
+                                    </HBox>
+                                    <HBox>
+                                       <children>
+                                          <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@icons/map.png" />
+                                             </image>
+                                             <HBox.margin>
+                                                <Insets left="30.0" top="25.0" />
+                                             </HBox.margin>
+                                          </ImageView>
+                                          <Text fx:id="locationText" fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="2020/08/31 16:00" wrappingWidth="303.9375228881836">
+                                             <font>
+                                                <Font name="Consolas" size="20.0" />
+                                             </font>
+                                             <HBox.margin>
+                                                <Insets left="15.0" top="22.0" />
+                                             </HBox.margin>
+                                          </Text>
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                       <children>
+                                          <JFXButton fx:id="attendButton" defaultButton="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="57.0" prefWidth="146.0" style="-fx-background-color: #788FE2; -fx-background-radius: 10; -jfx-disable-visual-focus: true;" text="Attend" textFill="#e7e7e7">
+                                             <font>
+                                                <Font name="Consolas Bold" size="20.0" />
+                                             </font>
+                                          </JFXButton>
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets top="35.0" />
+                                       </VBox.margin>
+                                    </HBox>
                                  </children>
-                              </HBox>
-                              <HBox prefHeight="100.0" prefWidth="200.0" />
-                              <HBox prefHeight="100.0" prefWidth="200.0" />
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
+                              </VBox>
                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="955.0">
+                           <children>
+                              <Text fx:id="nameText" fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" HBox.hgrow="NEVER">
+                                 <font>
+                                    <Font name="Arial Bold" size="35.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Text>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="25.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <VBox prefWidth="950.0">
+                           <children>
+                              <Text fx:id="shortDesText" fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                                 <font>
+                                    <Font name="Arial" size="20.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Detail Description">
+                                 <font>
+                                    <Font name="Arial Bold" size="24.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="20.0" />
+                                 </VBox.margin>
+                              </Text>
+                              <Text fx:id="detailDesText" fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                                 <font>
+                                    <Font name="Arial" size="20.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="5.0" />
+                                 </VBox.margin>
+                              </Text>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="25.0" />
+                           </VBox.margin>
                         </VBox>
                      </children>
-                  </AnchorPane>
+                  </VBox>
                </children>
-            </GridPane>
-            <Text fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-               <font>
-                  <Font name="Arial Bold" size="35.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="100.0" />
-               </GridPane.margin>
-            </Text>
-            <Text fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.rowIndex="2">
-               <font>
-                  <Font name="Arial" size="20.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="40.0" top="15.0" />
-               </GridPane.margin>
-            </Text>
-            <Text fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Detail Description" GridPane.rowIndex="3">
-               <font>
-                  <Font name="Arial Bold" size="24.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="40.0" top="20.0" />
-               </GridPane.margin>
-            </Text>
-            <Text fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets left="40.0" top="5.0" />
-               </GridPane.margin>
-               <font>
-                  <Font name="Arial" size="20.0" />
-               </font>
-            </Text>
-         </children>
-      </GridPane>
-   </content>
-</ScrollPane>
+            </AnchorPane>
+         </content>
+      </ScrollPane>
+      <ImageView fx:id="closePaneButton" fitHeight="20.0" fitWidth="20.0" layoutX="845.0" layoutY="-41.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="960.0" AnchorPane.topAnchor="13.0">
+         <image>
+            <Image url="@icons/cross.png" />
+         </image>
+      </ImageView>
+   </children>
+</AnchorPane>
