--- a/src/main/resources/userManage.fxml
+++ b/src/main/resources/userManage.fxml
@@ -1,14 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXCheckBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="UserManage"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #26262B #26262B;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Text fill="#e7e7e7" layoutX="50.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search">
+         <font>
+            <Font name="Consolas" size="20.0" />
+         </font>
+      </Text>
+      <TextField fx:id="keywordTextField" layoutX="132.0" layoutY="42.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="344.0" promptText="enter key words here" style="-fx-background-color: #555A61; -fx-text-fill: #E7E7E7;">
+         <font>
+            <Font name="Consolas" size="18.0" />
+         </font>
+      </TextField>
+      <JFXCheckBox fx:id="nameCheckBox" layoutX="581.0" layoutY="51.0" selected="true" text="Name" textFill="#e7e7e7">
+         <font>
+            <Font name="Consolas" size="18.0" />
+         </font>
+      </JFXCheckBox>
+      <JFXCheckBox fx:id="descriptionCheckBox" layoutX="691.0" layoutY="53.0" selected="true" text="Full name" textFill="#e7e7e7">
+         <font>
+            <Font name="Consolas" size="18.0" />
+         </font>
+      </JFXCheckBox>
+      <Text fill="#e7e7e7" layoutX="509.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="In:">
+         <font>
+            <Font name="Consolas" size="20.0" />
+         </font>
+      </Text>
+      <TableView fx:id="userTableView" layoutX="50.0" layoutY="100.0" prefHeight="470.0" prefWidth="900.0" stylesheets="@css/tableview.css">
+        <columns>
+          <TableColumn fx:id="usernameColumn" editable="false" minWidth="-1.0" prefWidth="-1.0" text="Username" />
+          <TableColumn fx:id="fullanameColumn" editable="false" minWidth="-1.0" prefWidth="-1.0" text="Full name" />
+            <TableColumn fx:id="emailColumn" editable="false" minWidth="-1.0" prefWidth="-1.0" text="Email" />
+            <TableColumn fx:id="actionColumn" editable="false" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" text="Action" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+   </children>
 </AnchorPane>
